refactored wine entity. - added db migration - added Wine related entities WineStyle, Grape and WineGrapeComposition - updated existing code to support new Wine implementation